@@ -142,6 +142,7 @@ Space Train (old hardware)
 Spider-Man 1.02 (English, French)
 Star Trek 25th Anniversary 3.00 (unofficial MOD)
 Star Wars 1.01
+Strange Science rev. C (which makes this the newest we have :))
 Striker Xtreme 1.00 (Italian)
 Theatre of Magic 1.3XC (competition MOD) (updated)
 Trident (MOD rev. 23c)
